--- a/signup.html
+++ b/signup.html
@@ -122,7 +122,7 @@
           <button class="facebook">Facebook</button>
         </div>
         <div class="login">
-          Already have an account?<a href="signin.html"
+          Already have an account?<a href="index.html"
             ><strong>Log in</strong></a
           >
         </div>
