--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
             <button type="submit">Log in</button>
           </form>
         </div>
-        <div class="or">or continue with</div>      
+        <div class="or">or continue with</div>
         <div class="social button">
           <button class="google">Google</button>
           <button class="facebook">Facebook</button>
         </div>
         <div class="link">
           Don't have account?
-          <a href="/signup.html"><strong>sign up</strong></a>
+          <a href="signup.html"><strong>sign up</strong></a>
         </div>
       </div>
       <div class="image-box">
